[package]
name = "flltr"
version = "0.2.1"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/flltr"
homepage = "https://github.com/pic16f877ccs/flltr"
license = "GPL-3.0-or-later"
description = "Formats text by longest line, by inserting characters at the end of the string"
keywords = ["text", "format", "constant-width"]
categories = ["command-line-utilities"]

[dependencies]
structopt = { version = "*", default-features = false }
colored = "2.0.0"
